# First-Course-Hometasks

./: README.md
Autumn/Common/: Success Stories.txt  rules.txt
Autumn/chunkedArray/: CMakeLists.txt  chunkedArray.c  chunkedArray.h  main.c
Autumn/task1/: main.c
Autumn/task10/: main.c  util.h
Autumn/task10-deprecated/: main.c
Autumn/task12/: CMakeLists.txt  linkedList.c  main.c  unsignedBignum.h  util.h
Autumn/task2/: main.c
Autumn/task3/: CMakeLists.txt
Autumn/task4/: CMakeLists.txt  main.c
Autumn/task5/: CMakeLists.txt
Autumn/task6/: CMakeLists.txt  mappedFile.h  mstring.c
Autumn/task6-hardcore/: CMakeLists.txt  fileIO.c  hashTable.c  hashTable.h  main.c  pair.c  stringArray.c
Autumn/task7/: hashTable.c  hashTable.h  linkedList.c  pair.c  readme.txt
Autumn/task8/: CMakeLists.txt  util.h
Autumn/task9/: main.c  myMemoryManager.h
Haskell/FinalBooleans/: .gitignore  ChangeLog.md  LICENSE  README.md  package.yaml
Haskell/LambdaEvaluator/: .gitignore  ChangeLog.md  HaskellHomework.cabal  LICENSE  README.md  package.yaml
Haskell/LambdaParser/: .gitignore  README.md  package.yaml
Haskell/Sat/: .gitignore  ChangeLog.md  README.md  package.yaml
Haskell/Sequent-Calculus/: .gitignore  ChangeLog.md  README.md  package.yaml  stack.yaml
Haskell/Sudoku/: input.txt  package.yaml  stack.yaml
Haskell/Transformer/: .gitignore  (+2 more)
Semester 1/: README.md  Задачи.docx
Semester 2/: .gitignore  README.md
Semester 3/: .gitignore  README.md  Tasks.docx
Semeter 1/: README.md
Semeter 2/: .gitignore  README.md
Spring/: README.md  SuccessStories.txt
(+664 files in other folders)
